fix(chat overlay): fix obs overflow

--- a/overlay/chat/styles.css
+++ b/overlay/chat/styles.css
@@ -7,7 +7,7 @@
   overflow-y: hidden;
   /* Hide vertical scrollbar */
   border: 1px solid #000;
-  padding: 5px;
+  padding: 1px;
   background-color: #000;
 }
 
