--- a/overlay/global.css
+++ b/overlay/global.css
@@ -7,4 +7,5 @@ body {
   font-family: Minecraft;
   /* Use fallback fonts like 'sans-serif' in case the custom font doesn't load */
   font-size: 24px;
+  overflow: hidden;
 }
